<resources>
    <string name="app_name">Weather</string>
    <string name="push_me">Push me</string>
    <string name="clear">Clear</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature_label">Температура</string>
    <string name="feels_like_label">Ощущается как</string>
    <string name="city_coordinates">lt/ln: %s, %s"</string>
    <string name="bar_message">Произошла самая неожиданная ошибка!!</string>
    <string name="action_string">push me</string>
    <string name="network_lost">Network lost</string>
    <string name="network_is_available">Network is available</string>
    <string name="okhttp">OkHTTP</string>
    <string name="retrofit">retrofit</string>
    <string name="weather_loader">Weather Loader</string>
    <string name="local">Local</string>
    <string name="room">Room</string>
    <string name="contacts">contacts</string>
    <string name="message">Давай доступ который просит программа</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотитеузнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно.Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известнаялокация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_message">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="location_message">Пожалуйста вылезите из болота и двигайтесь ближе к цевилизации</string>
    <string name="maps">maps</string>
    <string name="search">search</string>
    <string name="moscow">Moscow</string>
    <string name="searching_maps_message">Введите название города или местности</string>
</resources>